force-app/main/default/objects/Account/fields/CF_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>CF_Group_Name__c</fullName>
    <description>This is the Formal field for the text field</description>
    <formula>LEFT(Name,40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Queue Name</label>
    <type>Text</type>
</CustomField>