force-app/main/default/objects/Account/fields/CF_Nested_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>CF_Nested_Group_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>VIEWS Nested Group ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>