force-app/main/default/objects/Account/fields/comm_VVC_URL__c.field-meta.xml
<CustomField>
    <fullName>comm_VVC_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VVC URL</label>
    <type>Url</type>
</CustomField>