force-app/main/default/objects/Account/fields/SSN_Last_4_Digits__c.field-meta.xml
<CustomField>
    <fullName>SSN_Last_4_Digits__c</fullName>
    <description
    >The last four digits of the social security number or Tax Id. Required to facilitate Global Search on the last four digits of SSN; simply searching on the last four digits
        of the standard field do not work- not even when using a wildcard (Salesforce limitation)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The last four digits of the Social Security Number or Tax Id.</inlineHelpText>
    <label>SSN (Last 4 Digits)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>