force-app/main/default/objects/Account/fields/SSN_Search__c.field-meta.xml
<CustomField>
    <fullName>SSN_Search__c</fullName>
    <description
    >The last four digits of the social security number or Tax Id. Required to facilitate Global Search on the last four digits of SSN; simply searching on the last four digits
        of the standard field do not work- not even when using a wildcard (Salesforce limitation). The first letter of the last name comes first as specific VA
        requirement.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The last four digits of the Social Security Number or Tax Id prefixed with the first letter of the last name.</inlineHelpText>
    <label>SSN Search</label>
    <length>5</length>
    <type>Text</type>
</CustomField>