force-app/main/default/objects/Account/fields/VCC_Birth_City__c.field-meta.xml
<CustomField>
    <fullName>VCC_Birth_City__c</fullName>
    <description>Birth city of patient, used to search against MPI.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Birth City</label>
    <type>TextArea</type>
</CustomField>