force-app/main/default/objects/Account/fields/VCC_Date_Patient_Verified__c.field-meta.xml
<CustomField>
    <fullName>VCC_Date_Patient_Verified__c</fullName>
    <description>Date veteran&apos;s insurance, primary phone and address were last verified.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date veteran&apos;s insurance, primary phone and address were last verified.</inlineHelpText>
    <label>Date Patient Info Verified</label>
    <type>Date</type>
</CustomField>