force-app/main/default/objects/Account/fields/VCC_Mailing_different_from_Billing__c.field-meta.xml
<CustomField>
    <fullName>VCC_Mailing_different_from_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to designate that the primary address is different from the mailing address.</description>
    <inlineHelpText>Select if Primary and Mailing address are different.</inlineHelpText>
    <label>Mailing Address Different from Primary?</label>
    <type>Checkbox</type>
</CustomField>