force-app/main/default/objects/Account/fields/VCC_Station_ID__c.field-meta.xml
<CustomField>
    <fullName>VCC_Station_ID__c</fullName>
    <description>This is the station number or mail ID for the facility.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText
    >This is the three-digit code (with alpha-numeric suffixes as applicable) that provides VA facilities’ unique site identification (see VA Accounting Classification
        Structure (ACS) Volume II – Chapter 1).</inlineHelpText>
    <label>Station Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>