force-app/main/default/objects/Account/listViews/Master_Training_Mode_Accounts.listView-meta.xml
<ListView>
    <fullName>Master_Training_Mode_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Is_Training_Account__c</columns>
    <columns>VCC_MVI_External_Id__pc</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Training_Account__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Master Training Mode Accounts</label>
</ListView>